GUI-1481: Fix alignment of login form fields

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -967,6 +967,12 @@ footer {
     }
 }
 
+.tabs-content > .content {
+    &.large-centered, &.medium-centered {
+        float: none;
+    }
+}
+
 
 /* -----------------------------------------
    Progress bars
